[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Sprites/Misc/Trash.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/Misc/LargeShadow.png" type="Texture" id=2]
[ext_resource path="res://Assets/Codes/DamagingTrash.gd" type="Script" id=3]
[ext_resource path="res://Assets/SFX/Move.mp3" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sprites/Misc/Dust.png" type="Texture" id=6]

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.552486 )
colors = PoolColorArray( 1, 1, 1, 0.588235, 1, 1, 1, 0 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 40, 32 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 256, 152 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 40, 32 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 48, 20 )

[sub_resource type="Animation" id=1]
resource_name = "Falling"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -576 ), Vector2( 0, -16 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0.5, 1 ), Vector2( 1.2, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 3, 4, 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Shadow:scale")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0.6 ), Vector2( 4, 1.6 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("DamageArea:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -576 ), Vector2( 0, -8 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("DamageArea/Collision:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("DamageArea/Collision:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Cloud:emitting")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath(".:ENABLED")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=2]
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -576 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Collision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Collision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Shadow:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 0.6 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("DamageArea:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -576 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("DamageArea/Collision:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("DamageArea/Collision:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.000418024 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath(".:ENABLED")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[node name="DamagingTrash" type="KinematicBody2D" groups=["DamagingTrash"]]
collision_layer = 4
script = ExtResource( 3 )
ENABLED = true

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, 16 )
scale = Vector2( 1, 0.6 )
texture = ExtResource( 2 )

[node name="Cloud" type="CPUParticles2D" parent="."]
position = Vector2( 0, 16 )
rotation = 3.14159
emitting = false
amount = 16
one_shot = true
explosiveness = 1.0
lifetime_randomness = 0.1
texture = ExtResource( 6 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 150.0
angular_velocity = 720.0
angular_velocity_random = 1.0
scale_amount_random = 0.5
color_ramp = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -576 )
scale = Vector2( 0.5, 1 )
texture = ExtResource( 1 )
hframes = 5

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="PlayerFinder" type="Area2D" parent="."]
visible = false

[node name="Collision" type="CollisionShape2D" parent="PlayerFinder"]
shape = SubResource( 4 )

[node name="DamageArea" type="Area2D" parent="."]
position = Vector2( 0, -576 )

[node name="Collision" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource( 5 )
disabled = true

[node name="HurtArea" type="Area2D" parent="." groups=["Enemy"]]
collision_layer = 4
collision_mask = 2

[node name="Collision" type="CollisionShape2D" parent="HurtArea"]
position = Vector2( 0, 4 )
shape = SubResource( 7 )

[node name="Animation" type="AnimationPlayer" parent="."]
anims/Falling = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 10.0
bus = "SFX"

[connection signal="body_entered" from="PlayerFinder" to="." method="_on_PlayerFinder_body_entered"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_DamageArea_body_entered"]
[connection signal="area_entered" from="HurtArea" to="." method="_on_HurtArea_area_entered"]
[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
